# rustcraft

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODING_PRACTICES.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/rc-input/: Cargo.toml
crates/rc-input/src/: actions.rs  bindings.rs  lib.rs  plugin.rs  state.rs
crates/rc-interaction/: Cargo.toml
crates/rc-interaction/src/: actions.rs  aimed_block.rs  gizmo.rs  lib.rs  plugin.rs  raycast.rs
crates/rc-inventory/: Cargo.toml
crates/rc-inventory/src/: lib.rs  plugin.rs  selected.rs  slots.rs
crates/rc-player/: Cargo.toml
crates/rc-player/src/: camera.rs  components.rs  config.rs  cursor.rs  lib.rs  look.rs  movement.rs  plugin.rs
crates/rc-render/: Cargo.toml
crates/rc-render/src/: assets.rs  config.rs  lib.rs  lighting.rs  materials.rs  meshing.rs  plugin.rs
crates/rc-ui/: Cargo.toml
crates/rc-ui/src/: crosshair.rs  hotbar.rs  lib.rs  plugin.rs
crates/rc-voxel/: Cargo.toml
crates/rc-voxel/src/: block.rs  chunk.rs  generation.rs  lib.rs  position.rs  registry.rs
crates/rc-world/: Cargo.toml
crates/rc-world/src/: chunk_map.rs  components.rs  config.rs  diagnostics.rs  generation.rs  lib.rs  plugin.rs  remesh.rs  spawn.rs
crates/rustcraft/: Cargo.toml
crates/rustcraft/src/: app.rs  diagnostics.rs  hotbar.rs  interaction.rs  lib.rs  selection.rs  state.rs
src/: main.rs
