[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/rustcraft"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
publish = false

[workspace.dependencies]
bevy = "0.18.1"
rc-input = { path = "crates/rc-input" }
rc-interaction = { path = "crates/rc-interaction" }
rc-inventory = { path = "crates/rc-inventory" }
rc-player = { path = "crates/rc-player" }
rc-render = { path = "crates/rc-render" }
rc-ui = { path = "crates/rc-ui" }
rc-voxel = { path = "crates/rc-voxel" }
rc-world = { path = "crates/rc-world" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
