[package]
name = "rc-interaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
rc-inventory.workspace = true
rc-player.workspace = true
rc-render.workspace = true
rc-voxel.workspace = true
rc-world.workspace = true

[lints]
workspace = true
